--- a/arch/arm64/configs/libra_user_defconfig
+++ b/arch/arm64/configs/libra_user_defconfig
@@ -1439,7 +1439,7 @@ CONFIG_WLAN=y
 # CONFIG_LIBRA_SDIOIF is not set
 # CONFIG_ATH6K_LEGACY_EXT is not set
 # CONFIG_WCNSS_CORE is not set
-# CONFIG_CNSS is not set
+CONFIG_CNSS=y
 CONFIG_CNSS_PCI=y
 # CONFIG_CNSS_SECURE_FW is not set
 CONFIG_BUS_AUTO_SUSPEND=y
@@ -3567,12 +3567,19 @@ CONFIG_PRIMA_WLAN_OKC=y
 CONFIG_PRIMA_WLAN_11AC_HIGH_TP=y
 CONFIG_WLAN_FEATURE_11W=y
 CONFIG_WLAN_FEATURE_LPSS=y
-CONFIG_QCA_WIFI_AUTOMOTIVE_CONC=y
 CONFIG_QCOM_VOWIFI_11R=y
 CONFIG_WLAN_FEATURE_NAN=y
+# CONFIG_WLAN_FEATURE_NAN_DATAPATH is not set
 CONFIG_QCOM_TDLS=y
 CONFIG_QCOM_LTE_COEX=y
+# CONFIG_WLAN_SYNC_TSF is not set
+CONFIG_WLAN_FEATURE_MEMDUMP=y
 CONFIG_WLAN_OFFLOAD_PACKETS=y
+CONFIG_QCA_WIFI_AUTOMOTIVE_CONC=y
+# CONFIG_WLAN_UDP_RESPONSE_OFFLOAD is not set
+# CONFIG_WLAN_FEATURE_RX_WAKELOCK is not set
+# CONFIG_WLAN_WOW_PULSE is not set
+# CONFIG_DPTRACE_ENABLE is not set
 
 #
 # Qualcomm MSM specific device drivers
