--- a/arch/arm64/configs/libra_user_defconfig
+++ b/arch/arm64/configs/libra_user_defconfig
@@ -1,12 +1,17 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 3.10.49 Kernel Configuration
+# Linux/arm64 3.10.84 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
 CONFIG_ARCH_PHYS_ADDR_T_64BIT=y
 CONFIG_MMU=y
 CONFIG_NO_IOPORT_MAP=y
+CONFIG_ARCH_MMAP_RND_BITS_MIN=18
+CONFIG_ARCH_MMAP_RND_BITS_MAX=24
+CONFIG_ARCH_MMAP_RND_COMPAT_BITS_MIN=11
+CONFIG_ARCH_MMAP_RND_COMPAT_BITS_MAX=16
+CONFIG_ILLEGAL_POINTER_VALUE=0xdead000000000000
 CONFIG_STACKTRACE_SUPPORT=y
 CONFIG_LOCKDEP_SUPPORT=y
 CONFIG_TRACE_IRQFLAGS_SUPPORT=y
@@ -99,7 +104,6 @@ CONFIG_GENERIC_SCHED_CLOCK=y
 CONFIG_CGROUPS=y
 # CONFIG_CGROUP_DEBUG is not set
 CONFIG_CGROUP_FREEZER=y
-CONFIG_FROZEN_APP=y
 # CONFIG_CGROUP_DEVICE is not set
 CONFIG_CPUSETS=y
 CONFIG_PROC_PID_CPUSET=y
@@ -107,6 +111,8 @@ CONFIG_CGROUP_CPUACCT=y
 CONFIG_RESOURCE_COUNTERS=y
 CONFIG_MEMCG=y
 CONFIG_MEMCG_SWAP=y
+CONFIG_MEMCG_SWAP_ENABLED=y
+# CONFIG_MEMCG_KMEM is not set
 # CONFIG_CGROUP_PERF is not set
 CONFIG_CGROUP_SCHED=y
 CONFIG_FAIR_GROUP_SCHED=y
@@ -124,6 +130,7 @@ CONFIG_NET_NS=y
 CONFIG_UIDGID_CONVERTED=y
 # CONFIG_UIDGID_STRICT_TYPE_CHECKS is not set
 # CONFIG_SCHED_AUTOGROUP is not set
+CONFIG_MM_OWNER=y
 # CONFIG_SYSFS_DEPRECATED is not set
 CONFIG_RELAY=y
 CONFIG_BLK_DEV_INITRD=y
@@ -187,6 +194,7 @@ CONFIG_HAVE_PERF_REGS=y
 CONFIG_HAVE_PERF_USER_STACK_DUMP=y
 CONFIG_HAVE_ARCH_JUMP_LABEL=y
 CONFIG_ARCH_WANT_COMPAT_IPC_PARSE_VERSION=y
+CONFIG_HAVE_ARCH_SECCOMP_FILTER=y
 CONFIG_HAVE_CC_STACKPROTECTOR=y
 CONFIG_CC_STACKPROTECTOR=y
 # CONFIG_CC_STACKPROTECTOR_NONE is not set
@@ -195,6 +203,10 @@ CONFIG_CC_STACKPROTECTOR_REGULAR=y
 CONFIG_HAVE_IRQ_TIME_ACCOUNTING=y
 CONFIG_HAVE_ARCH_TRANSPARENT_HUGEPAGE=y
 CONFIG_MODULES_USE_ELF_RELA=y
+CONFIG_HAVE_ARCH_MMAP_RND_BITS=y
+CONFIG_ARCH_MMAP_RND_BITS=18
+CONFIG_HAVE_ARCH_MMAP_RND_COMPAT_BITS=y
+CONFIG_ARCH_MMAP_RND_COMPAT_BITS=11
 CONFIG_CLONE_BACKWARDS=y
 CONFIG_OLD_SIGSUSPEND3=y
 CONFIG_COMPAT_OLD_SIGACTION=y
@@ -207,6 +219,7 @@ CONFIG_HAVE_GENERIC_DMA_COHERENT=y
 CONFIG_SLABINFO=y
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
+# CONFIG_SYSTEM_TRUSTED_KEYRING is not set
 CONFIG_MODULES=y
 # CONFIG_MODULE_FORCE_LOAD is not set
 CONFIG_MODULE_UNLOAD=y
@@ -272,7 +285,6 @@ CONFIG_ARCH_MSM=y
 # CONFIG_ARCH_MSM8916 is not set
 CONFIG_ARCH_MSM8994=y
 CONFIG_ARCH_MSM8994_V1_TLBI_WA=y
-# CONFIG_MSM8994_V1_PMUIRQ_WA is not set
 CONFIG_ARCH_MSM8992=y
 # CONFIG_ARCH_XGENE is not set
 
@@ -359,8 +371,14 @@ CONFIG_CROSS_MEMORY_ATTACH=y
 # CONFIG_BALANCE_ANON_FILE_RECLAIM is not set
 CONFIG_GENERIC_EARLY_IOREMAP=y
 CONFIG_KSWAPD_CPU_AFFINITY_MASK=""
+# CONFIG_PROCESS_RECLAIM is not set
+# CONFIG_ZPOOL is not set
+CONFIG_ZSMALLOC=y
+# CONFIG_PGTABLE_MAPPING is not set
+# CONFIG_ZSMALLOC_STAT is not set
 # CONFIG_XEN is not set
 CONFIG_FORCE_MAX_ZONEORDER=11
+# CONFIG_SECCOMP is not set
 
 #
 # Boot options
@@ -495,6 +513,7 @@ CONFIG_INET_XFRM_MODE_TUNNEL=y
 CONFIG_INET_DIAG=y
 CONFIG_INET_TCP_DIAG=y
 # CONFIG_INET_UDP_DIAG is not set
+# CONFIG_INET_DIAG_DESTROY is not set
 # CONFIG_TCP_CONG_ADVANCED is not set
 CONFIG_TCP_CONG_CUBIC=y
 CONFIG_DEFAULT_TCP_CONG="cubic"
@@ -592,7 +611,7 @@ CONFIG_NETFILTER_XT_TARGET_CLASSIFY=y
 CONFIG_NETFILTER_XT_TARGET_CONNMARK=y
 # CONFIG_NETFILTER_XT_TARGET_CT is not set
 # CONFIG_NETFILTER_XT_TARGET_DSCP is not set
-# CONFIG_NETFILTER_XT_TARGET_HL is not set
+CONFIG_NETFILTER_XT_TARGET_HL=y
 # CONFIG_NETFILTER_XT_TARGET_HMARK is not set
 CONFIG_NETFILTER_XT_TARGET_IDLETIMER=y
 CONFIG_NETFILTER_XT_TARGET_HARDIDLETIMER=y
@@ -678,6 +697,7 @@ CONFIG_IP_NF_FILTER=y
 CONFIG_IP_NF_TARGET_REJECT=y
 CONFIG_IP_NF_TARGET_REJECT_SKERR=y
 # CONFIG_IP_NF_TARGET_ULOG is not set
+CONFIG_IP_NF_TARGET_TTL=y
 CONFIG_NF_NAT_IPV4=y
 CONFIG_IP_NF_TARGET_MASQUERADE=y
 # CONFIG_IP_NF_TARGET_NATTYPE_MODULE is not set
@@ -689,7 +709,6 @@ CONFIG_NF_NAT_H323=y
 CONFIG_IP_NF_MANGLE=y
 # CONFIG_IP_NF_TARGET_CLUSTERIP is not set
 # CONFIG_IP_NF_TARGET_ECN is not set
-CONFIG_IP_NF_TARGET_TTL=y
 CONFIG_IP_NF_RAW=y
 # CONFIG_IP_NF_SECURITY is not set
 CONFIG_IP_NF_ARPTABLES=y
@@ -899,6 +918,7 @@ CONFIG_RFKILL_LEDS=y
 # CONFIG_CEPH_LIB is not set
 # CONFIG_NFC is not set
 # CONFIG_NFC_QNCI is not set
+# CONFIG_NFC_NQ is not set
 CONFIG_IPC_ROUTER=y
 CONFIG_IPC_ROUTER_SECURITY=y
 
@@ -974,6 +994,9 @@ CONFIG_OF_RESERVED_MEM=y
 # CONFIG_PARPORT is not set
 CONFIG_BLK_DEV=y
 # CONFIG_BLK_DEV_PCIESSD_MTIP32XX is not set
+CONFIG_ZRAM=y
+# CONFIG_ZRAM_LZ4_COMPRESS is not set
+# CONFIG_ZRAM_DEBUG is not set
 # CONFIG_BLK_CPQ_CISS_DA is not set
 # CONFIG_BLK_DEV_DAC960 is not set
 # CONFIG_BLK_DEV_UMEM is not set
@@ -1027,13 +1050,13 @@ CONFIG_BLK_DEV_RAM_SIZE=4096
 # CONFIG_USB_SWITCH_FSA9480 is not set
 # CONFIG_LATTICE_ECP3_CONFIG is not set
 # CONFIG_SRAM is not set
+# CONFIG_UID_CPUTIME is not set
 # CONFIG_HAPTIC_ISA1200 is not set
 CONFIG_QSEECOM=y
 # CONFIG_QFP_FUSE is not set
 # CONFIG_QPNP_MISC is not set
 CONFIG_TI_DRV2667=y
 CONFIG_QCOM_LIQUID_DOCK=y
-# CONFIG_STM32_FW_UPDATER is not set
 # CONFIG_C2PORT is not set
 
 #
@@ -1060,6 +1083,13 @@ CONFIG_QCOM_LIQUID_DOCK=y
 # CONFIG_ALTERA_STAPL is not set
 CONFIG_MSM_QDSP6V2_CODECS=y
 CONFIG_MSM_ULTRASOUND=y
+
+#
+# Typec driver ic support
+#
+CONFIG_TYPEC_DRIVER=y
+CONFIG_TYPEC_PERICOM_30216A=y
+CONFIG_TYPEC_TI_TUSB320=y
 
 #
 # SCSI device support
@@ -1175,6 +1205,7 @@ CONFIG_DM_REQ_CRYPT=y
 # CONFIG_DM_UEVENT is not set
 # CONFIG_DM_FLAKEY is not set
 CONFIG_DM_VERITY=y
+# CONFIG_DM_VERITY_FEC is not set
 # CONFIG_TARGET_CORE is not set
 # CONFIG_FUSION is not set
 
@@ -1439,13 +1470,7 @@ CONFIG_WLAN=y
 # CONFIG_LIBRA_SDIOIF is not set
 # CONFIG_ATH6K_LEGACY_EXT is not set
 # CONFIG_WCNSS_CORE is not set
-CONFIG_CNSS=y
-CONFIG_CNSS_PCI=y
-# CONFIG_CNSS_SECURE_FW is not set
-CONFIG_BUS_AUTO_SUSPEND=y
 CONFIG_WCNSS_MEM_PRE_ALLOC=y
-CONFIG_CNSS_MAC_BUG=y
-CONFIG_CLD_LL_CORE=y
 CONFIG_ATH_CARDS=y
 # CONFIG_ATH_DEBUG is not set
 # CONFIG_ATH5K_PCI is not set
@@ -1460,6 +1485,15 @@ CONFIG_WIL6210_PLATFORM_MSM=y
 # CONFIG_LIBERTAS is not set
 # CONFIG_WL_TI is not set
 # CONFIG_MWIFIEX is not set
+CONFIG_CNSS=y
+CONFIG_CNSS_PCI=y
+# CONFIG_CNSS_SDIO is not set
+CONFIG_CNSS_MAC_BUG=y
+# CONFIG_CLD_DEBUG is not set
+# CONFIG_CLD_HL_SDIO_CORE is not set
+CONFIG_CLD_LL_CORE=y
+# CONFIG_CNSS_SECURE_FW is not set
+CONFIG_BUS_AUTO_SUSPEND=y
 
 #
 # Enable WiMAX (Networking options) to see the WiMAX drivers
@@ -1640,6 +1674,7 @@ CONFIG_INPUT_GPIO=y
 # CONFIG_INPUT_ADXL34X is not set
 # CONFIG_INPUT_IMS_PCU is not set
 # CONFIG_INPUT_CMA3000 is not set
+CONFIG_INPUT_FPC1020=y
 # CONFIG_BMP18X is not set
 # CONFIG_SENSORS_MMA8X5X is not set
 # CONFIG_SENSORS_AP3426 is not set
@@ -1652,7 +1687,6 @@ CONFIG_INPUT_GPIO=y
 # CONFIG_SENSORS_BMA2X2 is not set
 # CONFIG_SENSORS_MC3430 is not set
 # CONFIG_SENSORS_ISL29044A is not set
-CONFIG_INPUT_FPC1020=y
 
 #
 # Hardware I/O ports
@@ -2232,7 +2266,6 @@ CONFIG_REGULATOR_PROXY_CONSUMER=y
 # CONFIG_REGULATOR_FAN53555 is not set
 CONFIG_REGULATOR_MEM_ACC=y
 # CONFIG_REGULATOR_ISL6271A is not set
-# CONFIG_REGULATOR_ISL98608 is not set
 # CONFIG_REGULATOR_MAX1586 is not set
 # CONFIG_REGULATOR_MAX8649 is not set
 # CONFIG_REGULATOR_MAX8660 is not set
@@ -3122,6 +3155,7 @@ CONFIG_USB_MSM_SSPHY=y
 CONFIG_USB_MSM_SSPHY_QMP=y
 CONFIG_MSM_QUSB_PHY=y
 # CONFIG_USB_RCAR_PHY is not set
+# CONFIG_DUAL_ROLE_USB_INTF is not set
 CONFIG_USB_GADGET=y
 # CONFIG_USB_GADGET_DEBUG is not set
 CONFIG_USB_GADGET_DEBUG_FILES=y
@@ -3507,9 +3541,6 @@ CONFIG_STAGING=y
 # CONFIG_IIO_GPIO_TRIGGER is not set
 # CONFIG_IIO_SYSFS_TRIGGER is not set
 # CONFIG_IIO_SIMPLE_DUMMY is not set
-CONFIG_ZSMALLOC=y
-CONFIG_ZRAM=y
-# CONFIG_ZRAM_DEBUG is not set
 # CONFIG_FB_SM7XX is not set
 # CONFIG_CRYSTALHD is not set
 # CONFIG_FB_XGI is not set
@@ -3527,18 +3558,11 @@ CONFIG_ZRAM=y
 # Android
 #
 CONFIG_ANDROID=y
-CONFIG_ANDROID_BINDER_IPC=y
-# CONFIG_ANDROID_BINDER_IPC_32BIT is not set
 CONFIG_ASHMEM=y
-CONFIG_ANDROID_LOGGER=y
-CONFIG_LOGCAT_SIZE=256
-CONFIG_LARGE_LOGCAT_SIZE=2048
 CONFIG_ANDROID_TIMED_OUTPUT=y
 # CONFIG_ANDROID_TIMED_GPIO is not set
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
-CONFIG_ANDROID_WHETSTONE=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
-CONFIG_ANDROID_INTF_ALARM_DEV=y
 CONFIG_SYNC=y
 CONFIG_SW_SYNC=y
 # CONFIG_SW_SYNC_USER is not set
@@ -3605,7 +3629,6 @@ CONFIG_MSM_AVTIMER=y
 CONFIG_PFT=y
 # CONFIG_MSM_SPSS is not set
 CONFIG_MSM_BUS_SCALING=y
-CONFIG_MSM_BUSPM_DEV=y
 CONFIG_BUS_TOPOLOGY_ADHOC=y
 # CONFIG_DEBUG_BUS_VOTER is not set
 # CONFIG_I2C_MSM_PROF_DBG is not set
@@ -3680,6 +3703,7 @@ CONFIG_IIO_KFIFO_BUF=y
 CONFIG_IIO_TRIGGERED_BUFFER=y
 CONFIG_IIO_TRIGGER=y
 CONFIG_IIO_CONSUMERS_PER_TRIGGER=2
+# CONFIG_X7_SENSOR_HAL is not set
 
 #
 # Accelerometers
@@ -3790,6 +3814,11 @@ CONFIG_MOBICORE_SUPPORT=y
 # CONFIG_MOBICORE_DEBUG is not set
 CONFIG_MOBICORE_API=y
 # CONFIG_RESET_CONTROLLER is not set
+
+#
+# Android
+#
+CONFIG_ANDROID_BINDER_IPC=y
 # CONFIG_CORESIGHT is not set
 # CONFIG_BIF is not set
 # CONFIG_SENSORS is not set
@@ -3829,6 +3858,7 @@ CONFIG_MSM_QDSP6_APRV2=y
 CONFIG_MSM_ADSP_LOADER=y
 # CONFIG_MSM_MEMORY_DUMP is not set
 CONFIG_MSM_MEMORY_DUMP_V2=y
+# CONFIG_MSM_DEBUG_LAR_UNLOCK is not set
 # CONFIG_MSM_DDR_HEALTH is not set
 # CONFIG_MSM_COMMON_LOG is not set
 CONFIG_MSM_WATCHDOG_V2=y
@@ -3861,7 +3891,6 @@ CONFIG_MSM_PERFORMANCE=y
 CONFIG_QCOM_NPA_DUMP=y
 CONFIG_KERNEL_TEXT_MPU_PROT=y
 # CONFIG_MEM_SHARE_QMI_SERVICE is not set
-CONFIG_SERIAL_NUM=y
 
 #
 # Firmware Drivers
@@ -4052,8 +4081,6 @@ CONFIG_PRINTK_TIME=y
 CONFIG_DEFAULT_MESSAGE_LOGLEVEL=4
 CONFIG_ENABLE_WARN_DEPRECATED=y
 CONFIG_ENABLE_MUST_CHECK=y
-# CONFIG_FIRE_WATCHDOG is not set
-CONFIG_DUMP_ALL_STACKS=y
 CONFIG_FRAME_WARN=2048
 CONFIG_MAGIC_SYSRQ=y
 # CONFIG_STRIP_ASM_SYMS is not set
@@ -4075,6 +4102,7 @@ CONFIG_PANIC_ON_OOPS_VALUE=0
 CONFIG_SCHEDSTATS=y
 CONFIG_TIMER_STATS=y
 # CONFIG_DEBUG_OBJECTS is not set
+# CONFIG_SLUB_DEBUG_ON is not set
 # CONFIG_SLUB_STATS is not set
 CONFIG_HAVE_DEBUG_KMEMLEAK=y
 # CONFIG_DEBUG_KMEMLEAK is not set
@@ -4125,6 +4153,7 @@ CONFIG_RCU_CPU_STALL_VERBOSE=y
 # CONFIG_NOTIFIER_ERROR_INJECTION is not set
 # CONFIG_FAULT_INJECTION is not set
 # CONFIG_DEBUG_PAGEALLOC is not set
+# CONFIG_SLUB_DEBUG_PANIC_ON is not set
 CONFIG_NOP_TRACER=y
 CONFIG_HAVE_FUNCTION_TRACER=y
 CONFIG_HAVE_FUNCTION_GRAPH_TRACER=y
@@ -4187,6 +4216,7 @@ CONFIG_KEYS=y
 # CONFIG_ENCRYPTED_KEYS is not set
 # CONFIG_KEYS_DEBUG_PROC_KEYS is not set
 # CONFIG_SECURITY_DMESG_RESTRICT is not set
+# CONFIG_SECURITY_PERF_EVENTS_RESTRICT is not set
 CONFIG_SECURITY=y
 # CONFIG_SECURITYFS is not set
 CONFIG_SECURITY_NETWORK=y
@@ -4390,16 +4420,3 @@ CONFIG_LIBFDT=y
 CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
 CONFIG_STRICT_MEMORY_RWX=y
-CONFIG_TYPEC_DRIVER=y
-CONFIG_TYPEC_PERICOM_30216A=y
-CONFIG_TYPEC_TI_TUSB320=y
-#config cifs
-#CONFIG_CIFS=y
-#CONFIG_NLS=y
-#CONFIG_NLS_DEFAULT="iso8859-1"
-#CONFIG_NLS_CODEPAGE_437=y
-#CONFIG_NLS_CODEPAGE_936=y
-#CONFIG_NLS_CODEPAGE_950=y
-#CONFIG_NLS_ASCII=y
-#CONFIG_NLS_ISO8859_1=y
-#CONFIG_NLS_UTF8=y
