defconfig: libra: generate new defconfig

--- a/arch/arm64/configs/libra_user_defconfig
+++ b/arch/arm64/configs/libra_user_defconfig
@@ -295,6 +295,7 @@ CONFIG_ARM_AMBA=y
 CONFIG_PCI=y
 CONFIG_PCI_DOMAINS=y
 CONFIG_PCI_SYSCALL=y
+CONFIG_ARCH_SUPPORTS_MSI=y
 CONFIG_PCI_MSI=y
 # CONFIG_PCI_DEBUG is not set
 # CONFIG_PCI_REALLOC_ENABLE_AUTO is not set
@@ -419,11 +420,11 @@ CONFIG_PM=y
 # CONFIG_PM_DEBUG is not set
 CONFIG_PM_OPP=y
 CONFIG_PM_CLK=y
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_CPU_PM=y
 # CONFIG_SUSPEND_TIME is not set
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_ARM64_CPU_SUSPEND=y
-CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 
 #
 # CPU Power Management
@@ -1479,6 +1480,7 @@ CONFIG_ATH_CARDS=y
 CONFIG_WIL6210=y
 CONFIG_WIL6210_ISR_COR=y
 CONFIG_WIL6210_TRACING=y
+# CONFIG_WIL6210_WRITE_IOCTL is not set
 CONFIG_WIL6210_PLATFORM_MSM=y
 # CONFIG_BRCMFMAC is not set
 # CONFIG_HOSTAP is not set
@@ -1877,6 +1879,7 @@ CONFIG_SPI_SPIDEV=y
 CONFIG_SPMI=y
 CONFIG_SPMI_MSM_PMIC_ARB=y
 CONFIG_MSM_QPNP_INT=y
+# CONFIG_MSM_SPMI_DEBUGFS_RO is not set
 
 #
 # Qualcomm MSM SSBI bus support
@@ -2865,6 +2868,7 @@ CONFIG_DTS_SRS_TM=y
 CONFIG_QTI_PP=y
 CONFIG_SND_SOC_CPE=y
 CONFIG_SND_SOC_MSM8994=y
+# CONFIG_SND_SOC_MSM8994_HDMI_CODEC_RX is not set
 CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_ALL_CODECS is not set
 CONFIG_SND_SOC_WCD9330=y
@@ -3947,6 +3951,7 @@ CONFIG_F2FS_FS_XATTR=y
 CONFIG_F2FS_FS_POSIX_ACL=y
 CONFIG_F2FS_FS_SECURITY=y
 # CONFIG_F2FS_CHECK_FS is not set
+# CONFIG_F2FS_FS_ENCRYPTION is not set
 CONFIG_FS_POSIX_ACL=y
 CONFIG_FILE_LOCKING=y
 CONFIG_FSNOTIFY=y
@@ -4316,7 +4321,7 @@ CONFIG_CRYPTO_XCBC=y
 # Digest
 #
 CONFIG_CRYPTO_CRC32C=y
-# CONFIG_CRYPTO_CRC32 is not set
+CONFIG_CRYPTO_CRC32=y
 # CONFIG_CRYPTO_GHASH is not set
 CONFIG_CRYPTO_MD4=y
 CONFIG_CRYPTO_MD5=y
