--- a/arch/arm64/configs/libra_user_defconfig
+++ b/arch/arm64/configs/libra_user_defconfig
@@ -378,7 +378,7 @@ CONFIG_ZSMALLOC=y
 # CONFIG_ZSMALLOC_STAT is not set
 # CONFIG_XEN is not set
 CONFIG_FORCE_MAX_ZONEORDER=11
-# CONFIG_SECCOMP is not set
+CONFIG_SECCOMP=y
 
 #
 # Boot options
